--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 slack_url=https://hooks.slack.com/services/aaa/aaa/aaa
-log=true
+log=
 error=true
-kill=true
-exception=false
-restart=false
+kill=
+exception=
+restart=
 reload=true
-delete=false
-stop=false
-exit=true
-start=true
+delete=
+stop=true
+exit=
+start=
 online=true
 buffer=true
 buffer_seconds=2
